load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")


js_library(
    name = "js_entry_point",
    srcs = glob([
        "js/*.js",
    ]),
)

webpack(
    name = "webpack",
    outs = ["dist"],
    args = [
        "--entry",
        "$(execpaths :js_entry_point)",
        "--config",
        "$(execpath webpack.config.js)",
        "-o",
        "$@",
    ],
    data = [
        "webpack.config.js",
        ":js_entry_point",
        "@npm//:node_modules",
    ],
)
