load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "copy_to_bin")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")


js_library(
    name = "js_entry_point",
    srcs = glob([
        "js/*.js",
    ]),
)

copy_to_bin(
    name = "webpack_config_js",
    srcs = ["webpack.config.js"],
)

webpack(
    name = "webpack",
    outs = ["dist"],
    args = [
        "./$(execpath %s)" % e for e in glob([":js_entry_point"])
    ] + [
        "--config",
        "./$(execpath webpack_config_js)",
        "-o",
        "$@",
    ],
    data = [
        ":webpack_config_js",
        ":js_entry_point",
        "@npm//:node_modules",
    ],
)
